# L2mRankingReaderCV

./: .gitignore  .gitmodules  CMakeLists.txt  expt_roller_example.json  main.cpp  settings_ExpertiseRoller.json
ExpertiseRoller/: main.cpp
GetImage/: main.cpp
LifeStoneRoller/: main.cpp
MemReadTest/: main.cpp
RankinReader/: main.cpp
Tools/: Tools.cpp  Tools.h
